--- a/postcube.cz/src/stylesheets/main.scss
+++ b/postcube.cz/src/stylesheets/main.scss
@@ -5,6 +5,8 @@
   --mdc-layout-grid-margin-desktop: 24px;
   --mdc-layout-grid-gutter-desktop: 20px;
   --mdc-layout-grid-column-width-desktop: 60px;
+  --mdc-layout-grid-margin-tablet: 24px;
+  --mdc-layout-grid-margin-phone: 14px;
 }
 
 html {
@@ -15,6 +17,7 @@ body {
   margin: 0;
 }
 
+
 .layout-wrapper {
   max-width: 1224px;
   margin: 0 auto;
@@ -24,18 +27,25 @@ textarea:focus, button:focus, input:focus {
   outline: none;
 }
 
+// Svg filling color //
 svg {
   .a {
     fill: #1538e5;
   }
 }
 
+// For Similar Sections of Icons and Text //
 .icon-section {
   text-align: center;
+  padding: 4em 0 6em;
 
   .icon-section__content {
     max-width: 280px;
     margin: 0 auto;
   }
+
+    .action-btn {
+      margin: 2em 0;
+    }
 }
 
