PostCube - Detailed Info

--- a/postcube.cz/src/html/index.njk
+++ b/postcube.cz/src/html/index.njk
@@ -107,13 +107,13 @@
     </div>
   </section>
 
-  <section id="" class="facts mdc-layout-grid">
+  <section id="" class="detailed-info mdc-layout-grid">
     <div class="mdc-layout-grid__inner layout-wrapper">
-      <div class="mdc-layout-grid__cell">
+      <div class="detailed-info--users mdc-layout-grid__cell mdc-layout-grid__cell--span-3-tablet">
         <p class="users">1024</p>
         <p>Tolik z&nbsp;vás už PostCube používá a spokojeně nečeká na kurýra.</p>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop">
+      <div class="detailed-info--clients mdc-layout-grid__cell mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-8-desktop">
         <img alt="Loga klientů" src="/assets/img/clients_icon.png">
         <p>Spolupracujeme s&nbsp;největšími přepravními společnostmi a e-shopy.</p>
       </div>
