Postcube - Contact Section
Html + CSS

--- a/postcube.cz/src/html/index.njk
+++ b/postcube.cz/src/html/index.njk
@@ -136,8 +136,7 @@
   </section>
   <section class="how-it-works icon-section mdc-layout-grid">
     <div class="mdc-layout-grid__inner layout-wrapper">
-      <div
-        class="after-icon icon-section__content mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
+      <div class="after-icon icon-section__content mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
         <svg xmlns="http://www.w3.org/2000/svg" width="45.993" height="40.286" viewBox="0 0 45.993 40.286">
           <defs>
             <style>.a {
@@ -361,14 +360,13 @@
             jak vypadá v&nbsp;reálu.</p>
         </div>
 
-        <div
-          class="contact__form mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+        <div class="contact__form mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
           <h3>Dejte nám kontakt a my se ozveme</h3>
           <form>
             <input datatype="name" placeholder="Jméno nebo název firmy" id="company-name" type="text">
             <input datatype="email" id="phone-name" placeholder="Email" type="text">
             <div class="mdc-layout-grid__inner">
-              <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone">
+              <div class="contact__form--button mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone">
                 <button class="mdc-button" type="submit">
                   <a href="#" class="mdc-button__label">ODESLAT</a>
                 </button>
