--- a/postcube.cz/src/stylesheets/hp.scss
+++ b/postcube.cz/src/stylesheets/hp.scss
@@ -18,6 +18,7 @@
     font-weight: 800;
     margin-bottom: 44px;
   }
+
   .detailed-info--clients {
     padding: 24px;
     @media screen and (min-width: 540px) {
@@ -34,9 +35,11 @@
   color: var(--postcube-primary);
   padding-top: 4em;
   padding-bottom: 4em;
+
   .testimonial__content {
     max-width: 520px;
   }
+
   p {
     font-size: 20px;
   }
@@ -177,8 +180,6 @@
   text-align: left;
 
   .contact__title {
-    max-width: 400px;
-
     h2 {
       margin-bottom: 0;
     }
@@ -191,38 +192,33 @@
 
   .contact__form {
     input {
-      background: var(--postcube-white);
+      font-size: 18px;
       border: none;
       height: 48px;
       width: 80%;
       padding-left: 20px;
       margin-bottom: 20px;
+      background: var(--postcube-white);
+      &::placeholder {
+        font-size: 18px;
+        color: var(--postcube-black);
+      }
     }
 
-    .submit-button {
+    .contact__form--button {
       align-self: center;
 
       button {
         font-size: 20px;
-        color: var(--postcube-black);
-        background: var(--postcube-secondary);
-        border: none;
-        width: 100%;
-        height: 50px;
-
-        &:hover {
-          cursor: pointer;
-          background: var(--postcube-secondary-light);
-        }
-
         @media (max-width: 839px) {
           font-size: 16px;
         }
       }
     }
-
-    @media (max-width: 839px) {
-      p {
+    p {
+      font-size: 14px;
+      line-height: 20px;
+      @media (max-width: 839px) {
         font-size: 12px;
         line-height: 18px;
       }
