--- a/postcube.cz/src/html/components/header.njk
+++ b/postcube.cz/src/html/components/header.njk
@@ -49,8 +49,49 @@
           </svg>
         </a>
         <a class="logo logo--phone" href="/" title="Go to homepage">
-          <svg xmlns="http://www.w3.org/2000/svg" width="65" height="64.999" viewBox="0 0 65 64.999"><defs><style>.a{fill:#1538e5;}.b{fill:#fff;}</style></defs><g transform="translate(-140 -20)"><g transform="translate(140 20)"><path class="a" d="M286.978,165.259v43.333l21.667,21.666h43.333V186.925l-21.667-21.666Z" transform="translate(-286.978 -165.259)"/><g transform="translate(2.71 27.301)"><path class="b" d="M298.133,288.283V278.118h4.182a3.216,3.216,0,1,1,0,6.419h-1.989v3.747Zm2.193-5.562h1.859a1.4,1.4,0,1,0,0-2.788h-1.859Z" transform="translate(-298.133 -278.002)"/><path class="b" d="M328.077,293.132a3.864,3.864,0,1,1,3.863,3.776A3.693,3.693,0,0,1,328.077,293.132Zm5.693,0a1.84,1.84,0,1,0-1.83,2.033A1.849,1.849,0,0,0,333.77,293.132Z" transform="translate(-320.803 -286.51)"/><path class="b" d="M360.266,294.323h1.743a1.209,1.209,0,0,0,1.336,1.06c.625,0,1.06-.3,1.06-.711,0-1.5-3.935-.029-3.935-3.108a2.358,2.358,0,0,1,2.614-2.207c1.757,0,2.948.944,3.021,2.382h-1.757a1.162,1.162,0,0,0-1.205-.959c-.566,0-.958.247-.958.712,0,1.5,4.008-.2,4.008,3.108,0,1.394-1.133,2.309-2.846,2.309C361.558,296.908,360.339,295.906,360.266,294.323Z" transform="translate(-345.172 -286.51)"/><path class="b" d="M386.231,280.927h2.018v2.164h1.96v1.684h-1.96v2.759a.926.926,0,0,0,1.031,1.046h.929v1.83H389a2.5,2.5,0,0,1-2.774-2.657v-2.977h-1.409v-1.684h1.409Z" transform="translate(-363.763 -280.128)"/><path class="b" d="M408.1,282.838a4.878,4.878,0,0,1,5.1-5.2c2.556,0,4.429,1.452,4.705,3.645h-2.28a2.251,2.251,0,0,0-2.425-1.772c-1.641,0-2.9,1.147-2.9,3.325s1.263,3.311,2.9,3.311a2.319,2.319,0,0,0,2.483-1.757h2.178c-.189,2.178-2.062,3.645-4.662,3.645A4.856,4.856,0,0,1,408.1,282.838Z" transform="translate(-381.384 -277.639)"/><path class="b" d="M457.133,289.834v7.319H455.1v-1.016a2.485,2.485,0,0,1-2.222,1.133,2.667,2.667,0,0,1-2.716-2.876v-4.56h2.019v4.11a1.414,1.414,0,0,0,1.408,1.525,1.521,1.521,0,0,0,1.511-1.627v-4.008Z" transform="translate(-413.23 -286.871)"/><path class="b" d="M520.815,294.308a3.3,3.3,0,0,1-3.485,2.6,3.67,3.67,0,0,1-3.761-3.79,3.519,3.519,0,0,1,3.616-3.761,3.411,3.411,0,0,1,3.616,3.573c0,.276-.015.494-.029.653h-5.257a1.756,1.756,0,0,0,1.815,1.67c.813,0,1.35-.32,1.51-.944Zm-5.272-2h3.238a1.627,1.627,0,0,0-3.238,0Z" transform="translate(-461.232 -286.51)"/><path class="b" d="M485.773,281.494a2.473,2.473,0,0,0-2.033.886v-3.409h-2.018v9.958h2.018v-.8a2.448,2.448,0,0,0,2,.915c2.164,0,3.456-1.5,3.456-3.776S487.907,281.494,485.773,281.494Zm-.349,5.809a2.058,2.058,0,1,1,1.786-2.033A1.816,1.816,0,0,1,485.424,287.3Z" transform="translate(-437.122 -278.648)"/></g></g></g></svg>        </a>
-      </div>
+          <svg xmlns="http://www.w3.org/2000/svg" width="286.628" height="286.626" viewBox="0 0 286.628 286.626">
+            <defs>
+              <style>.a {
+                  fill: #1538e5;
+                }
+
+                .b {
+                  fill: #fff;
+                }</style>
+            </defs>
+            <g transform="translate(-40 80)">
+              <g transform="translate(40 -80)">
+                <path class="a" d="M186.978,65.259v97.605L376,351.885h97.605v-97.6L284.583,65.259Z"
+                      transform="translate(-186.978 -65.259)"/>
+                <g transform="translate(146.323 201.712)">
+                  <path class="b"
+                        d="M298.133,301.015v-22.9h9.42c4.874,0,7.72,3.009,7.72,7.229,0,4.187-2.845,7.229-7.72,7.229h-4.481v8.439Zm4.939-12.528h4.187a3.143,3.143,0,1,0,0-6.281h-4.187Z"
+                        transform="translate(-298.133 -277.856)"/>
+                  <path class="b"
+                        d="M328.077,297.861a8.7,8.7,0,1,1,8.7,8.5A8.319,8.319,0,0,1,328.077,297.861Zm12.823,0c0-2.748-1.668-4.613-4.121-4.613s-4.122,1.865-4.122,4.613c0,2.715,1.668,4.579,4.122,4.579S340.9,300.576,340.9,297.861Z"
+                        transform="translate(-311.692 -282.945)"/>
+                  <path class="b"
+                        d="M360.266,300.543h3.926a2.722,2.722,0,0,0,3.009,2.387c1.407,0,2.388-.687,2.388-1.6,0-3.37-8.865-.066-8.865-7,0-2.911,2.519-4.972,5.888-4.972,3.958,0,6.641,2.126,6.8,5.365h-3.958a2.617,2.617,0,0,0-2.715-2.159c-1.275,0-2.159.556-2.159,1.6,0,3.369,9.028-.458,9.028,7,0,3.14-2.552,5.2-6.411,5.2C363.177,306.366,360.43,304.109,360.266,300.543Z"
+                        transform="translate(-326.268 -282.945)"/>
+                  <path class="b"
+                        d="M388,280.927h4.546V285.8h4.416v3.794h-4.416v6.216a2.085,2.085,0,0,0,2.322,2.355h2.094v4.121h-2.715c-3.795,0-6.248-2.159-6.248-5.986v-6.706h-3.173V285.8H388Z"
+                        transform="translate(-337.387 -279.128)"/>
+                  <path class="b"
+                        d="M408.1,289.349c0-7.72,5.365-11.71,11.482-11.71,5.757,0,9.977,3.271,10.6,8.211h-5.136c-.327-2.388-2.584-3.991-5.462-3.991-3.7,0-6.542,2.584-6.542,7.49s2.846,7.458,6.542,7.458c2.944,0,5.2-1.6,5.593-3.958h4.907c-.425,4.907-4.645,8.211-10.5,8.211C413.365,301.06,408.1,297.07,408.1,289.349Z"
+                        transform="translate(-347.926 -277.639)"/>
+                  <path class="b"
+                        d="M465.863,289.834V306.32h-4.579v-2.289a5.6,5.6,0,0,1-5.005,2.551c-3.7,0-6.117-2.715-6.117-6.477V289.834h4.547v9.258a3.185,3.185,0,0,0,3.173,3.435,3.427,3.427,0,0,0,3.4-3.664v-9.028Z"
+                        transform="translate(-366.974 -283.161)"/>
+                  <path class="b"
+                        d="M529.891,300.51c-.654,3.566-3.795,5.855-7.851,5.855a8.267,8.267,0,0,1-8.472-8.538c0-4.187,2.551-8.472,8.145-8.472,5.822,0,8.145,4.285,8.145,8.047,0,.622-.033,1.112-.065,1.472H517.951a3.956,3.956,0,0,0,4.089,3.762c1.831,0,3.042-.72,3.4-2.126ZM518.017,296h7.295a3.41,3.41,0,0,0-3.6-3.3C519.652,292.693,518.409,293.707,518.017,296Z"
+                        transform="translate(-395.684 -282.945)"/>
+                  <path class="b"
+                        d="M490.847,284.654a5.57,5.57,0,0,0-4.579,2v-7.678h-4.547V301.4h4.547v-1.8a5.515,5.515,0,0,0,4.514,2.06c4.874,0,7.785-3.369,7.785-8.5S495.656,284.654,490.847,284.654Zm-.785,13.084c-2.453,0-4.056-1.832-4.056-4.579,0-2.781,1.6-4.612,4.056-4.612,2.388,0,4.024,1.831,4.024,4.612C494.085,295.906,492.45,297.738,490.062,297.738Z"
+                        transform="translate(-381.264 -278.242)"/>
+                </g>
+              </g>
+            </g>
+          </svg></div>
       <div
         class="hamburger mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-5-tablet">
         <div class="hamburger__container">
