PostCube - Added Meta Description

--- a/postcube.cz/src/html/index.njk
+++ b/postcube.cz/src/html/index.njk
@@ -6,8 +6,8 @@
 {% endblock %}
 {% block head %}
   <meta name="description"
-        content="">
-  <link rel="canonical" href="https://www.postcube.cz/">
+        content="Chytrá schránka PostCube pro vyzvedávání zásilek kdykoliv.">
+  <link rel="canonical" href="https://postcube.cz/">
   <meta property="og:type" content="company">
   <meta property="og:url" content="https://www.postcube.cz/">
   <meta property="og:site_name" content="postcube.cz">
@@ -220,8 +220,7 @@
   </section>
   <section class="get-app mdc-layout-grid">
     <div class="mdc-layout-grid__inner layout-wrapper">
-      <div
-        class="get-app__content mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
+      <div class="get-app__content mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
         <h2>Aplikace ke stažení zdarma</h2>
         <p>Stáhněte si aplikaci do svého mobilního telefonu a staňte se pánem
           příjmu i&nbsp;odesílání zásilek. Vstupte do světa, kde se na zásilky
