[postcube.cz] Added fonts and other touches

--- a/postcube.cz/src/html/index.njk
+++ b/postcube.cz/src/html/index.njk
@@ -12,7 +12,6 @@
   <meta property="og:url" content="https://www.postcube.cz/">
   <meta property="og:site_name" content="postcube.cz">
 
-
   <style>
     img {
       width: 100%;
@@ -21,7 +20,7 @@
   </style>
 
 {% endblock %}
-{% include 'components/header.njk' %}
+
 {% block content %}
   <section id="main-info" class="main-info">
     <div class="mdc-layout-grid">
@@ -114,7 +113,7 @@
         <p>Tolik z&nbsp;vás už PostCube používá a spokojeně nečeká na kurýra.</p>
       </div>
       <div class="detailed-info--clients mdc-layout-grid__cell mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-8-desktop">
-        <img alt="Loga klientů" src="/assets/img/clients_icon.png">
+        <img alt="Loga klientů" src="/assets/img/clients_icon.png" width="760" height="164">
         <p>Spolupracujeme s&nbsp;největšími přepravními společnostmi a e-shopy.</p>
       </div>
     </div>
@@ -413,5 +412,4 @@
     </div>
   </section>
 {% endblock %}
-{% include 'components/footer.njk' %}
 
