--- a/postcube.cz/src/html/layouts/main.njk
+++ b/postcube.cz/src/html/layouts/main.njk
@@ -16,7 +16,29 @@
   <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
-  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+  <style>
+    @font-face {
+      font-family: "Roobert";
+      src: local("Roobert Regular"),
+      url("/assets/css/Roobert-Regular.woff2") format("woff2"),
+      url("/assets/css/Roobert-Regular.woff") format("woff"),
+      url("/assets/css/Roobert-Regular.ttf") format("tff");
+      font-weight: 400;
+      font-style: normal;
+      font-display: swap;
+    }
+
+    @font-face {
+      font-family: "Roobert";
+      src: local("Roobert Bold"),
+      url("/assets/css/Roobert-Bold.woff2") format("woff2"),
+      url("/assets/css/Roobert-Bold.woff") format("woff"),
+      url("/assets/css/Roobert-Bold.tff") format("tff");
+      font-weight: 700;
+      font-style: normal;
+      font-display: swap;
+    }
+  </style>
   <link rel="stylesheet" href="/assets/css/typography.css">
   <link rel="stylesheet" href="/assets/css/main.css">
   <link rel="stylesheet" href="/assets/css/hp.css">
