--- a/postcube.cz/src/html/index.njk
+++ b/postcube.cz/src/html/index.njk
@@ -105,19 +105,7 @@
       </div>
     </div>
   </section>
-
-  <section id="" class="detailed-info mdc-layout-grid">
-    <div class="mdc-layout-grid__inner layout-wrapper">
-      <div class="detailed-info--users mdc-layout-grid__cell mdc-layout-grid__cell--span-3-tablet">
-        <p class="users">1024</p>
-        <p>Tolik z&nbsp;vás už PostCube používá a spokojeně nečeká na kurýra.</p>
-      </div>
-      <div class="detailed-info--clients mdc-layout-grid__cell mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-8-desktop">
-        <img alt="Loga klientů" src="/assets/img/clients_icon.png" width="760" height="164">
-        <p>Spolupracujeme s&nbsp;největšími přepravními společnostmi a e-shopy.</p>
-      </div>
-    </div>
-  </section>
+  {% include 'components/guarantee.njk' %}
 
   <section class="testimonial mdc-layout-grid">
     <div class="mdc-layout-grid__inner layout-wrapper">
@@ -133,222 +121,11 @@
       </div>
     </div>
   </section>
-  <section class="how-it-works icon-section mdc-layout-grid">
-    <div class="mdc-layout-grid__inner layout-wrapper">
-      <div class="after-icon icon-section__content mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
-        <svg xmlns="http://www.w3.org/2000/svg" width="45.993" height="40.286" viewBox="0 0 45.993 40.286">
-          <defs>
-            <style>.a {
-                fill: #1538e5;
-              }</style>
-          </defs>
-          <path class="a"
-                d="M759.667,3078.567l.434-1.91a1.816,1.816,0,0,0,.047-.422,1.888,1.888,0,0,0-1.888-1.887H737.144l-.515-2.517H759.69a1.889,1.889,0,0,0,1.841-1.474l4.447-18.667-33.472,0-.721-3.525a1.887,1.887,0,0,0-1.846-1.51h-8.066a1.888,1.888,0,0,0-1.888,1.888v1.259a1.888,1.888,0,0,0,1.886,1.888h5.5l5.526,27.019a4.405,4.405,0,1,0,5.274.674h16.5a4.407,4.407,0,1,0,5-.818Zm-15.673-17.583v-5.651h5.9v5.651h5.4l-8.35,8.35-8.35-8.35Z"
-                transform="translate(-719.985 -3046.657)"/>
-        </svg>
-        <h3>Objednáte online</h3>
-        <p>V&nbsp;e-shopu zadáte číslo své PostCube, vyberete dopravce a zaplatíte.</p>
-      </div>
-      <div
-        class="after-icon icon-section__content link-icon--after-2 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
-        <svg xmlns="http://www.w3.org/2000/svg" width="46.093" height="37.662" viewBox="0 0 46.093 37.662">
-          <defs>
-            <style>.a {
-                fill: #1538e5;
-              }</style>
-          </defs>
-          <path class="a"
-                d="M792.936,2978.994h-.1v-8.632l-4.686-10.252h-9.518v-3.48a3.356,3.356,0,0,0-.034-.334v-3.2H748.036v23.7h-.016v6.907h4.724a7.062,7.062,0,0,0,14.124-.005h9.416a7.062,7.062,0,0,0,14.124,0h2.528a1.182,1.182,0,0,0,1.177-1.177v-2.351A1.182,1.182,0,0,0,792.936,2978.994Zm-33.13,8.239a3.531,3.531,0,1,1,3.53-3.534A3.53,3.53,0,0,1,759.806,2987.233Zm23.542,0h0a3.531,3.531,0,1,1,3.531-3.534A3.531,3.531,0,0,1,783.347,2987.233Zm5.884-15.3h-10.6v-8.241h7.244l3.356,7.349Z"
-                transform="translate(-748.02 -2953.099)"/>
-        </svg>
-        <h3>Přijede kurýr</h3>
-        <p>Pomocí jednorázového kódu kurýr otevře box a vloží do něj
-          zásilku.</p>
-      </div>
-      <div
-        class="icon-section__content mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
-        <svg xmlns="http://www.w3.org/2000/svg" width="53.745" height="37.474" viewBox="0 0 53.745 37.474">
-          <defs>
-            <style>.a {
-                fill: #1538e5;
-              }</style>
-          </defs>
-          <g transform="translate(-640.35 -2908.852)">
-            <path class="a"
-                  d="M667.223,2911.974l8.391,12.654,18.482-5.208-6.075-10.568-20.8,2.924-20.8-2.924-6.075,10.568,18.482,5.208Z"/>
-            <path class="a"
-                  d="M667.256,2916.663l-6.841,10.772-14.027-3.88v17.1l20.869,5.667,20.869-5.667v-17.1l-14.027,3.88Z"/>
-          </g>
-        </svg>
-        <h3>Zásilku vyzvednete</h3>
-        <p>Okamžitě vám přijde upozornění o&nbsp;doručení balíku, který na vás ve
-          schránce&nbsp;čeká.</p>
-      </div>
-      <div
-        class="icon-section__content mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
-        <svg xmlns="http://www.w3.org/2000/svg" width="38" height="38" viewBox="0 0 38 38">
-          <defs>
-            <style>.a {
-                fill: #1538e5;
-              }
+  {% include 'components/how-it-works.njk' %}
+  {% include 'components/get-app.njk' %}
+  {% include 'components/faq.njk' %}
 
-              .b {
-                fill: #fff;
-                stroke: rgba(0, 0, 0, 0);
-                stroke-miterlimit: 10;
-              }</style>
-          </defs>
-          <g transform="translate(-1074 -2777)">
-            <g transform="translate(-40)">
-              <path class="a" d="M286.978,165.259v25.333l12.667,12.666h25.333V177.926l-12.667-12.667Z"
-                    transform="translate(827.022 2611.741)"/>
-              <path class="b"
-                    d="M12.569,1879.2l2.789-2.789L.1,1861.154l3.051-3.051,15.253,15.254-1.525,1.525,4.314-4.315v8.629Zm-15.254-23.883H5.944l-8.629,8.629Z"
-                    transform="translate(1123.686 928.686)"/>
-            </g>
-          </g>
-        </svg>
-        <h3>Odesílání z&nbsp;boxu</h3>
-        <p>Chcete vrátit zboží nebo odeslat zásilku? V&nbsp;aplikaci stačí vyplnit
-          údaje a balík vložit do&nbsp;boxu.</p>
-      </div>
-      <div class="action-btn mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <a href="#contact" class="action-btn__label">Objednat PostCube</a>
-      </div>
-    </div>
-  </section>
-  <section class="get-app mdc-layout-grid">
-    <div class="mdc-layout-grid__inner layout-wrapper">
-      <div class="get-app__content mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
-        <h2>Aplikace ke stažení zdarma</h2>
-        <p>Stáhněte si aplikaci do svého mobilního telefonu a staňte se pánem
-          příjmu i&nbsp;odesílání zásilek. Vstupte do světa, kde se na zásilky
-          nečeká!</p>
-        <div class="mdc-layout-grid__inner">
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-            <button class="mdc-button" type="button">
-              <a href="#" class="mdc-button__label">Stáhnout pro iPhone</a>
-            </button>
-          </div>
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-            <button class="mdc-button" type="button">
-              <a href="#" class="mdc-button__label">Stáhnout pro iPhone</a>
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <section class="faq mdc-layout-grid">
-    <div class="mdc-layout-grid__inner layout-wrapper">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h2>Možná vás zajímá ještě něco více</h2>
-      </div>
-      <div class="accordion mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <div>
-         <input type="checkbox" name="accordion__faq" id="faq1" class="faq--input">
-         <label for="faq1" class="faq--label">Je možné poštovní box sdílet s&nbsp;někým jiným?</label>
-          <div class="faq--content">
-            <p>Ano. Můžete si například pořídit jeden společný poštovní box se
-              sousedem a náklady na jeho pořízení si rozdělit mezi sebou. Vyplatí se to
-              zvlášť tehdy, když si z&nbsp;e-shopu objednáváte jen jednou za čas, ale
-              i&nbsp;přesto chcete mít zmíněný komfort a nečekat na kurýra nebo objíždět
-              výdejní místa, když vás doma nezastihne.</p>
-          </div>
-        </div>
-        <div>
-          <input type="checkbox" name="accordion__faq" id="faq2" class="faq--input">
-          <label for="faq2" class="faq--label">Jaká je životnost poštovní schránky PostCube?</label>
-          <div class="faq--content">
-            <p>PostCube je kovová, voděodolná poštovní schránka budoucnosti navržená
-              tak, aby dlouhodobě odolávala nástrahám počasí. Její životnost je
-              minimálně 6&nbsp;let a závisí na způsobu umístění a používání.
-              Životnost tužkových baterií uvnitř PostCube záleží zejména na způsobu
-              a frekvenci jejího užívání a obvykle se pohybuje v&nbsp;řádu měsíců.
-              Úroveň nabití vidíte v&nbsp;aplikaci, která tuto informaci aktualizuje při
-              každém propojení s&nbsp;boxem.</p>
-            <p>V&nbsp;okamžiku zakoupení PostCube získáte záruku 2&nbsp;roky a můžete se na
-              nás obrátit v&nbsp;případě jakéhokoliv problému. A&nbsp;abyste přesně věděli,
-              co se kolem vaší poštovní schránky během dne děje, a mohli odhalit
-              viníka, kdyby došlo k&nbsp;jejímu poškození, doporučujeme si k&nbsp;ní zakoupit
-              kamerový systém.</p>
-          </div>
-        </div>
-        <div>
-          <input type="checkbox" name="accordion__faq" id="faq3" class="faq--input">
-          <label for="faq3" class="faq--label">Přes jaké dopravce je možné zasílat?</label>
-          <div class="faq--content">
-            <p>Naším cílem je, aby byla PostCube univerzální, a vy si tak mohli vybrat
-              dopravce, který vám vyhovuje nejvíce. V&nbsp;současné době navazujeme
-              spolupráci s&nbsp;předními logistickými společnostmi, jako jsou GLS, Liftago a
-              DHL, a v&nbsp;nejbližší době k&nbsp;nim přibudou také DPD, PPL, Zásilkovna,
-              Slovenská pošta, Česká pošta a&nbsp;další.</p>
-          </div>
-        </div>
-        <div>
-          <input type="checkbox" name="accordion__faq" id="faq4" class="faq--input">
-          <label for="faq4" class="faq--label">Mohu si vzhled PostCube nějak přizpůsobit?</label>
-          <div class="faq--content">
-            <p>Ano. Jen výběrem velikosti to zdaleka nekončí. Můžete si vybrat
-              z&nbsp;různých základových barev, případně PostCube opatřit polepem fólií
-              a sladit ji tak s&nbsp;barvou a stylem svého domu či plotu. Zcela jiný vzhled
-              dodá vaší poštovní schránce také to, zda bude stát na zemi, nebo na
-              stojanu. Různé varianty PostCube a jejího upevnění si můžete vyzkoušet
-              přes konfigurátor.</p>
-          </div>
-        </div>
-      </div>
-      <div class="accordion mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <div>
-          <input type="checkbox" name="accordion__faq" id="faq5" class="faq--input">
-          <label for="faq5" class="faq--label">Kde všude mohu PostCube umístit?</label>
-          <div class="faq--content">
-            <p>Kolem domu je celá řada možností, kam poštovní schránku PostCube
-              nainstalovat. Díky podstavci může být samostatně stojící kdekoliv na
-              zahradě, připevněná ke zdi nebo jako součást vašeho plotu. Fantazii se
-              meze nekladou.</p>
-          </div>
-        </div>
-        <div>
-          <input type="checkbox" name="accordion__faq" id="faq6" class="faq--input">
-          <label for="faq6" class="faq--label">Je možné aplikaci používat i&nbsp;na počítači?</label>
-          <div class="faq--content">
-            <p>Ano. Své zásilky můžete spravovat v&nbsp;jednoduché mobilní aplikaci,
-              která je zdarma ke stažení pro Android i&nbsp;iPhone. Pokud si však
-              s&nbsp;aplikacemi příliš netykáte, můžete celý systém přijímání
-              i&nbsp;odesílání zásilek řídit prostřednictvím webového prohlížeče.</p>
-          </div>
-        </div>
-        <div>
-          <input type="checkbox" name="accordion__faq" id="faq7" class="faq--input">
-          <label for="faq7" class="faq--label">Jaké příslušenství si k&nbsp;PostCube mohu dokoupit?</label>
-          <div class="faq--content">
-            <p>Používání poštovní schránky PostCube je samo o&nbsp;sobě velmi
-              jednoduché. Existují ale vychytávky, s&nbsp;nimiž je to ještě o&nbsp;krapet
-              pohodlnější a bezpečnější. Zakoupit si můžete stojan, abyste se ke
-              schránce nemuseli tolik sklánět, váhu pro zjištění přesné hmotnosti
-              balíku, bezpečnostní kameru nebo externí modul komunikující
-              s&nbsp;elektrickým zámkem na vaší brance nebo u&nbsp;vstupních dveří, který
-              přepravci zpřístupní PostCube, i&nbsp;když máte zamčeno. Veškeré
-              příslušenství najdete v&nbsp;sekci Produkty.</p>
-          </div>
-        </div>
-        <div>
-          <input type="checkbox" name="accordion__faq" id="faq8" class="faq--input">
-          <label for="faq8" class="faq--label">Jak probíhá instalace chytré poštovní schránky?</label>
-          <div class="faq--content">
-            <p>Instalaci PostCube může za poplatek provést náš montážní tým a vy se
-              tak nemusíte vůbec o&nbsp;nic starat, nebo se do montáže poštovní schránky
-              můžete pustit na vlastní pěst. V&nbsp;přehledném návodu najdete tipy, jak
-              správně použít spojovací materiál, který je součástí balení, a jaké
-              nářadí k&nbsp;tomu budete potřebovat. Svépomocí tak zvládnete PostCube
-              namontovat na zeď, na plot nebo ji můžete nechat volně stojící na stojanu
-              kdekoliv na zahradě.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+
   <section id="contact" class="contact">
     <div class="mdc-layout-grid layout-wrapper">
       <div class="mdc-layout-grid__inner">
