PostCube - Podstránka Domácnosti

--- a/postcube.cz/src/html/layouts/main.njk
+++ b/postcube.cz/src/html/layouts/main.njk
@@ -41,8 +41,7 @@
   </style>
   <link rel="stylesheet" href="/assets/css/typography.css">
   <link rel="stylesheet" href="/assets/css/main.css">
-  <link rel="stylesheet" href="/assets/css/hp.css">
-
+  <link rel="stylesheet" href="/assets/css/components/contact.css">
   {% block head %}{% endblock %}
 </head>
 <body id="page-{{page}}" vocab="https://schema.org/" typeof="{{ pageType or 'WebPage' }}">
