--- a/postcube.cz/src/html/domacnosti/index.njk
+++ b/postcube.cz/src/html/domacnosti/index.njk
@@ -17,6 +17,9 @@
       width: 100%;
       height: auto;
     }
+    .testimonial__content {
+      max-width: 80%;
+    }
   </style>
 
 {% endblock %}
@@ -27,11 +30,11 @@
       <div class="mdc-layout-grid__inner layout-wrapper">
         <div class="main-info__content mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
           <h1>PostCube k&nbsp;rodinnému domu</h1>
-          <p>Je spousta lepších činností než čekání na kurýra. S&nbsp;chytrou
-            schránkou PostCube si zásilku vyzvednete, až vy budete&nbsp;chtít!
-            <b>#necekamnakuryra</b></p>
+          <p>Zásilka vám dorazí nezávisle na tom, co právě děláte. Kurýr ji
+            zvládne doručit bez vaší přítomnosti!
+          <b>#necekamnakuryra</b></p>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+        <div class="main-info__bg mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
           <img alt="Fotografie PostCube" src="https://res.cloudinary.com/topmonks/image/upload/v1620652588/postcube.cz/section-bg01.png" width="50%" height="auto">
         </div>
       </div>
@@ -41,65 +44,19 @@
   <section id="about" class="about icon-section mdc-layout-grid">
     <div class="mdc-layout-grid__inner layout-wrapper">
       <div class="icon-section__content mdc-layout-grid__cell">
-        <svg xmlns="http://www.w3.org/2000/svg" width="30.412" height="48.659" viewBox="0 0 30.412 48.659">
-          <defs>
-            <style>.a {
-                fill: #1538e5;
-              }</style>
-          </defs>
-          <g transform="translate(-297.293 -654.072)">
-            <path class="a"
-                  d="M25.85,0H4.562A4.563,4.563,0,0,0,0,4.562V44.1a4.563,4.563,0,0,0,4.562,4.562H25.85A4.563,4.563,0,0,0,30.412,44.1V4.562A4.563,4.563,0,0,0,25.85,0ZM15.206,45.618a3.041,3.041,0,1,1,3.041-3.041A3.038,3.038,0,0,1,15.206,45.618ZM25.85,35.354a1.144,1.144,0,0,1-1.14,1.14H5.7a1.144,1.144,0,0,1-1.14-1.14V5.7A1.144,1.144,0,0,1,5.7,4.562H24.71A1.144,1.144,0,0,1,25.85,5.7Z"
-                  transform="translate(297.293 654.072)"/>
-            <path class="a"
-                  d="M14.252,9.036H5.974l.185.9h7.579a.678.678,0,0,1,.661.828l-.156.685a1.582,1.582,0,1,1-1.8.294H6.528A1.581,1.581,0,1,1,4.634,11.5l-1.984-9.7H.678A.678.678,0,0,1,0,1.129V.678A.678.678,0,0,1,.678,0h2.9a.678.678,0,0,1,.664.542L4.5,1.807H15.586a.678.678,0,0,1,.661.828L14.912,8.508A.678.678,0,0,1,14.252,9.036Z"
-                  transform="translate(303.553 667.774)"/>
-          </g>
-        </svg>
-        <h3>Pro radost z&nbsp;nakupování</h3>
-        <p>Svou zásilku už nikdy nezmeškáte. Doručí vám ji, i&nbsp;když právě
-          nejste doma. A&nbsp;díky mobilní aplikaci máte o&nbsp;všem přehled.</p>
+        <h3>Snadná instalace</h3>
+        <p>Poštovní box pohání čtyři tužkové baterie a nevyžaduje připojení
+          k&nbsp;internetu. Díky tomu může stát kdekoliv u&nbsp;domu nebo na zahradě.</p>
       </div>
       <div class="icon-section__content mdc-layout-grid__cell">
-        <svg xmlns="http://www.w3.org/2000/svg" width="38" height="38" viewBox="0 0 38 38">
-          <defs>
-            <style>.a {
-                fill: #1538e5;
-              }
-
-              .b {
-                fill: #fff;
-                stroke: rgba(0, 0, 0, 0);
-                stroke-miterlimit: 10;
-              }</style>
-          </defs>
-          <g transform="translate(-661 -658)">
-            <path class="a" d="M286.978,165.259v25.333l12.667,12.666h25.333V177.926l-12.667-12.667Z"
-                  transform="translate(374.022 492.741)"/>
-            <path class="b"
-                  d="M12.569,1879.2l2.789-2.789L.1,1861.154l3.051-3.051,15.253,15.254-1.525,1.525,4.314-4.315v8.629Zm-15.254-23.883H5.944l-8.629,8.629Z"
-                  transform="translate(670.686 -1190.314)"/>
-          </g>
-        </svg>
-        <h3>Příjem i&nbsp;odesílání zásilek</h3>
-        <p>PostCube vyzvedává a odesílá zásilky za vás. Při objednávce stačí
-          zadat jen číslo schránky a při odesílání vyplnit údaje
-          o&nbsp;příjemci.</p>
+        <h3>Bez čekání na kurýra</h3>
+        <p>Online nakupování vás bude bavit. Zásilku si totiž vyzvednete až ve
+          chvíli, kdy chcete vy. Klidně v&nbsp;jednu ráno a v&nbsp;pyžamu.</p>
       </div>
       <div class="icon-section__content mdc-layout-grid__cell">
-        <svg xmlns="http://www.w3.org/2000/svg" width="23.835" height="45.402" viewBox="0 0 23.835 45.402">
-          <defs>
-            <style>.a {
-                fill: #1538e5;
-              }</style>
-          </defs>
-          <path class="a"
-                d="M40.76,23.058l8.214-9.163L36.029,0V18.3l-7.636-7.636-2.785,2.785,9.582,9.612L25.608,32.67l2.785,2.785,7.636-7.636L36.27,45.4,49.443,32.221Zm3.623-9.133-4.432,4.432-.03-8.894ZM39.952,27.759l4.432,4.432-4.462,4.462Z"
-                transform="translate(-25.608)"/>
-        </svg>
-        <h3>Bezkontaktní a jednoduché</h3>
-        <p>Kovová PostCube funguje přes Bluetooth. Nepotřebujete kabel, připojení
-          k&nbsp;internetu, klíč ani si pamatovat PIN&nbsp;kód.</p>
+        <h3>Úžasně jednoduché</h3>
+        <p>Při objednávce zboží stačí zadat číslo poštovní schránky. Mobilní
+          aplikace vás pak sama upozorní, že balík právě přišel.</p>
       </div>
       <div class="action-btn mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <a href="#contact" class="action-btn__label">Objednat PostCube</a>
@@ -110,20 +67,20 @@
 
   <section class="testimonial mdc-layout-grid">
     <div class="mdc-layout-grid__inner layout-wrapper">
-      <div class="testimonial__content mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <h2>Zásilku vám doručíme v&nbsp;rozmezí 8&ndash;18 hodin.</h2>
-        <p>Tenhle špatný vtip už nikdy neuslyšíte.</p>
-      </div>
-      <div
-        class="testimonial__content mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <h2>Pokus o&nbsp;doručení nebyl úspěšný. Zásilku si vyzvedněte na
-          pobočce.</h2>
-        <p>Tyhle lístečky aby čert vzal!</p>
+      <div class="testimonial__content mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <h2>Cože? Vy jste teď přijel? Ale já už nejsem doma. A&nbsp;kde že si to mám
+          vyzvednout?</h2>
+        <p>Slova, která už nikdy nebudete muset vyslovit.</p>
       </div>
     </div>
   </section>
+  {% include 'components/why-pc.njk' %}
+
+  <h2 class="content-title">A&nbsp;takhle jednoduché to je</h2>
   {% include 'components/how-it-works.njk' %}
   {% include 'components/get-app.njk' %}
+  {% include 'components/choose-pc.njk' %}
+  {% include 'components/create-pc.njk' %}
   {% include 'components/faq.njk' %}
 
 
