--- a/postcube.cz/src/html/index.njk
+++ b/postcube.cz/src/html/index.njk
@@ -17,6 +17,11 @@
       width: 100%;
       height: auto;
     }
+
+    .main-info__content {
+      max-width: 380px;
+    }
+
     .testimonial__content {
       max-width: 520px;
     }
